# Loading BOLOS_SDK paths and definitions
option('sdk', type : 'string', description : 'Path to the ledger-secure-sdk')

# Defining the target device
option('target-device', type: 'combo', choices: ['flex', 'nanos', 'nanosplus', 'nanox', 'stax'])
option('is-plugin', type: 'boolean', value:false)

########################################
#     Application custom permissions   #
########################################
# See SDK `include/appflags.h` for the purpose of each permission
option('allow-derive-master', type: 'boolean', value: false)
option('allow-global-pin', type: 'boolean', value: false)
option('allow-bolos-settings', type: 'boolean', value: false)
option('allow-library', type: 'boolean', value: false)

########################################
# Application communication interfaces #
########################################
option('enable-bluetooth', type: 'boolean', value: false)
option('enable-nfc', type: 'boolean', value: false)
option('enable-swap', type:'boolean', value: false)
option('enable-app-storage', type: 'boolean', value: false)

########################################
#         NBGL custom features         #
########################################
option('enabe-nbgl-for-nano-devices', type: 'boolean', value:false)
option('enable-nbgl-qrcode', type: 'boolean', value: false)
option('enable-nbgl-keyboard', type: 'boolean', value: false)
option('enable-nbgl-keypad', type: 'boolean', value: false)

########################################
#          Features disablers          #
########################################
# These advanced settings allow to disable some feature that are by
# default enabled in the SDK `Makefile.standard_app`.
option('disable-standard-app-defines', type: 'boolean', value: false)
option('disable-standard-snprintf', type: 'boolean', value: false)
option('disable-standard-usb', type: 'boolean', value: false)
option('disable-standard-webusb', type: 'boolean', value: false)
option('disable-standard-bagl-ux-flow', type: 'boolean', value: false)
option('disable-standard-seproxyhal', type:'boolean', value:false)
option('disable-standard-app-files', type: 'boolean', value: false)
option('disable-standard-app-sync-rapdu', type:'boolean', value:false)
option('disable-default-io-seproxy-buffer-size', type: 'boolean', value: false)
option('disable-debug-ledger-assert', type: 'boolean', value: false)
option('disable-debug-throw', type: 'boolean', value: false)

# Meson migration
option('custom-app-flags', type:'integer', value:0x000)
option('not-reviewed', type:'boolean', value:true)
option('icon-name', type:'string', value:'')
option('app-webusb-url', type:'string', value:'')
option('enable-sdk-werror', type:'boolean', value:false)
option('app-glyphs', type: 'array', value:  ['glyphs/app_boilerplate_16px.gif', 'glyphs/app_boilerplate_64px.gif'])
